# -z_rmot

./: .gitignore  README.md  pyproject.toml  tracklet_centric_method_figure.md  tracklet_centric_method_figure_compact.md
configs/: baseline.json
scripts/: export_refer_kitti_detector_json.py  inspect_detector_json.py  make_toy_data.py
zerormot/: __init__.py  check_refer_kitti.py  evaluate_simple.py  io.py  proposals.py  query.py  run_refcoco.py  run_refer_kitti.py  scoring.py  structures.py  tracker.py
